# MySylar

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  log.txt
sylar/: config.cc  config.h  log.cc  log.h  singleton.h  util.cc  util.h
tests/: test.cc  test_config.cc
